--- a/lab-01-hello-r.Rmd
+++ b/lab-01-hello-r.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Lab 01 - Hello R"
-author: "Insert your name here"
-date: "Insert date here"
+author: "Tiffani Hill"
+date: "01/14/2026"
 output: 
   html_document: 
     fig_height: 4
